finished dashboard styling

--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,8 +1,10 @@
 <section id="signin">
-  <h1>Sign In</h1>
-
   <form action="" class="signin-form">
-    <div class="form-group">
+    <div class="title">
+      <h1>Sign In</h1>
+    </div>
+
+    <div class="form-group email-form-group">
       <label>Email</label>
       <input type="email" matInput />
       <span>Assistive Text</span>
@@ -12,9 +14,10 @@
       <input type="password" matInput />
       <span>Assistive Text</span>
     </div>
+
     <div class="btn-container">
-      <button class="btn btn-singin">SIGN IN</button>
-      <button class="btn btn-signup">SIGN UP</button>
+      <button class="btn btn-singin" mat-button>SIGN IN</button>
+      <button class="btn btn-signup" mat-button>SIGN UP</button>
     </div>
   </form>
 </section>
