--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,8 +1,7 @@
 <section id="signup">
-  <h1>Sign Up</h1>
-
   <form action="" class="signup-form">
-    <div class="form-group">
+    <h1>Sign Up</h1>
+    <div class="form-group name-form-group">
       <label>Name</label>
       <input type="text" matInput />
       <span>Your Name</span>
@@ -18,8 +17,8 @@
       <span>Password must contain a digit and a symbol</span>
     </div>
     <div class="btn-container">
-      <button class="btn btn-finish">FINISH</button>
-      <button class="btn btn-cancel">CANCEL</button>
+      <button class="btn btn-finish" mat-button>FINISH</button>
+      <button class="btn btn-cancel" mat-button>CANCEL</button>
     </div>
   </form>
 </section>
