--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,81 @@
-<p>dashboard works!</p>
+<section id="dashboard">
+  <header>
+    <div class="headline">
+      Welcome Jane Smith
+    </div>
+    <div class="header-icons">
+      <mat-icon>search</mat-icon>
+      <mat-icon>open_in_new</mat-icon>
+    </div>
+  </header>
+
+  <div class="files-container">
+    <div class="pagination">
+      My Files | My Folder | My Subfolder
+    </div>
+    <mat-card class="dashboard-card">
+      <div class="card-top">
+        <div class="card-info">
+          <mat-card-title>Folder Name</mat-card-title>
+          <mat-card-content>2 Folders, 4 files</mat-card-content>
+        </div>
+        <mat-icon class="card-icon">folder</mat-icon>
+      </div>
+      <div class="card-bottom">
+        <button mat-button>Open</button>
+        <button mat-button>Share</button>
+        <button mat-button>Delete</button>
+      </div>
+    </mat-card>
+    <mat-card class="dashboard-card">
+      <div class="card-top">
+        <div class="card-info">
+          <mat-card-title>Folder Name</mat-card-title>
+          <mat-card-content>2 Folders, 4 files</mat-card-content>
+        </div>
+        <mat-icon class="card-icon">folder</mat-icon>
+      </div>
+      <div class="card-bottom">
+        <button mat-button>Open</button>
+        <button mat-button>Share</button>
+        <button mat-button>Delete</button>
+      </div>
+    </mat-card>
+    <mat-card class="dashboard-card">
+      <div class="card-top">
+        <div class="card-info">
+          <mat-card-title>Folder Name</mat-card-title>
+          <mat-card-content>2 Folders, 4 files</mat-card-content>
+        </div>
+        <mat-icon class="card-icon">folder</mat-icon>
+      </div>
+      <div class="card-bottom">
+        <button mat-button>Open</button>
+        <button mat-button>Share</button>
+        <button mat-button>Delete</button>
+      </div>
+    </mat-card>
+    <mat-card class="dashboard-card">
+      <div class="card-top">
+        <div class="card-info">
+          <mat-card-title>Folder Name</mat-card-title>
+          <mat-card-content>2 Folders, 4 files</mat-card-content>
+        </div>
+        <mat-icon class="card-icon">folder</mat-icon>
+      </div>
+      <div class="card-bottom">
+        <button mat-button>Open</button>
+        <button mat-button>Share</button>
+        <button mat-button>Delete</button>
+      </div>
+    </mat-card>
+  </div>
+  <div class="dashboard-icons-container">
+    <div class="icon-bg">
+      <mat-icon class="dashboard-icon">create_new_folder</mat-icon>
+    </div>
+    <div class="icon-bg">
+      <mat-icon class="dashboard-icon">backup</mat-icon>
+    </div>
+  </div>
+</section>
