--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,18 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 body {
-  background-color: slateblue;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   font-family: 'Open Sans', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  --main-purple: #564481;
+  --main-green: #64cd6e;
 }
