--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,11 @@ body {
   box-sizing: border-box;
 }
 
+body,
+html {
+  height: 100%;
+}
+
 html {
   --main-purple: #564481;
   --main-green: #64cd6e;
