--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,22 +1,22 @@
 <section id="signin">
-  <form action="" class="signin-form">
+  <form action="" class="signin-form" #f="ngForm" (ngSubmit)="onSubmitSignIn(f)">
     <div class="title">
       <h1>Sign In</h1>
     </div>
 
     <div class="form-group email-form-group">
       <label>Email</label>
-      <input type="email" matInput />
+      <input type="email" matInput ngModel name="email" />
       <span>Assistive Text</span>
     </div>
     <div class="form-group">
       <label>Password</label>
-      <input type="password" matInput />
+      <input type="password" matInput ngModel name="password" />
       <span>Assistive Text</span>
     </div>
 
     <div class="btn-container">
-      <button class="btn btn-singin" mat-button>SIGN IN</button>
+      <button type="submit" class="btn btn-signin" mat-button>SIGN IN</button>
       <button class="btn btn-signup" mat-button>SIGN UP</button>
     </div>
   </form>
